Simplify functions and taskpane interface
- Reduced Excel functions to only SEARCH_SENSORS and PULL_SENSOR_DATA
- Renamed functions for better clarity
- Removed Ignore SSL Errors checkbox from taskpane
- Removed Test Connection button from taskpane
- Updated diagnostics message to be more user-friendly
- Added comprehensive setup guide in functions.ts
- Version bumped to 1.0.32

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -45,12 +45,7 @@
                     <label for="seeq-password">Password:</label>
                     <input type="password" id="seeq-password" placeholder="Your Seeq password" class="ms-TextField-field">
                 </div>
-                <div class="form-group">
-                    <label for="ignore-ssl">Ignore SSL Errors:</label>
-                    <input type="checkbox" id="ignore-ssl" class="ms-Checkbox-input">
-                </div>
                 <div class="auth-buttons">
-                    <button id="test-connection" class="ms-Button ms-Button--primary">Test Connection</button>
                     <button id="authenticate" class="ms-Button ms-Button--primary">Authenticate</button>
                     <button id="logout" class="ms-Button ms-Button--secondary" style="display: none;">Logout</button>
                 </div>
@@ -61,7 +56,7 @@
         <!-- Diagnostics Section -->
         <div id="diagnostics" class="diagnostics-section">
             <div class="diagnostics-panel">
-                <p>Run a connection test to see detailed diagnostics and troubleshoot CORS or AppDomain issues.</p>
+                <p>Enter your Seeq credentials above and click "Authenticate" to get started. If you encounter issues, check your Seeq server URL and access key credentials.</p>
             </div>
         </div>
 
