--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -100,6 +100,8 @@
             </ul>
 
             <p class="text-xs text-gray-500 mt-3">Tip: Timestamp column returns Excel serials. Format as Date to see readable times.</p>
+
+            <p class="text-sm text-gray-700 mt-3">Need Help? → <a href="mailto:austin@radialflow.net" class="text-indigo-600 underline">austin@radialflow.net</a></p>
         </div>
 
         <!-- Search and Data Sections (hidden by default; IDs preserved) -->
