--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -78,7 +78,7 @@
             <h4 class="text-sm font-semibold mb-2">Quick Functions</h4>
             <ul class="text-sm space-y-2">
                 <li>
-                    <code class="bg-gray-100 rounded px-1.5 py-0.5 block w-fit">=SqExcel.SEARCH_SENSORS(A1:C1)</code>
+                    <code class="bg-gray-100 rounded px-1.5 py-0.5 block w-fit">=SqExcel.SEARCH_SENSORS(sensorNames)</code>
                     <span class="text-gray-600">verify sensors; see unit/description</span>
                 </li>
                 <li>
