--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -83,19 +83,19 @@
                 </li>
                 <li>
                     <code class="bg-gray-100 rounded px-1.5 py-0.5 block w-fit">=SqExcel.PULL(sensorNames, startTime, endTime, "points", 1000)</code>
-                    <span class="text-gray-600">pull N points</span>
+                    <span class="text-gray-600">pull N points over time range</span>
                 </li>
                 <li>
                     <code class="bg-gray-100 rounded px-1.5 py-0.5 block w-fit">=SqExcel.PULL(sensorNames, startTime, endTime, "grid", "15min")</code>
-                    <span class="text-gray-600">pull on 15‑minute intervals</span>
+                    <span class="text-gray-600">pull using N‑minute intervals</span>
                 </li>
                 <li>
                     <code class="bg-gray-100 rounded px-1.5 py-0.5 block w-fit">=SqExcel.CURRENT(sensorName)</code>
-                    <span class="text-gray-600">current value</span>
+                    <span class="text-gray-600">get current value of a sensor</span>
                 </li>
                 <li>
                     <code class="bg-gray-100 rounded px-1.5 py-0.5 block w-fit">=SqExcel.AVERAGE(sensorName, startTime, endTime)</code>
-                    <span class="text-gray-600">average over range</span>
+                    <span class="text-gray-600">get average value over time range</span>
                 </li>
             </ul>
 
