--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -110,7 +110,7 @@
                     <div class="bg-green-100 text-green-800 rounded-lg px-3 py-1.5 mb-2 inline-block font-bold text-sm">
                         PULL
                     </div>
-                    <p class="text-sm text-gray-600 mb-2 font-medium">Retrieves time series data from Seeq sensors</p>
+                    <p class="text-sm text-gray-600 mb-2 font-medium">Retrieves time series data as a table</p>
                     <code class="text-xs text-gray-700 block mb-3 bg-gray-100 px-2 py-1 rounded">=SqExcel.PULL(sensorNames, startDatetime, endDatetime, [mode], [modeValue])</code>
                     
                     <div class="mb-4">
@@ -183,7 +183,7 @@
                         <code class="bg-gray-100 px-2 py-1 block text-xs font-mono text-gray-800 rounded">=SqExcel.AVERAGE("B3-Speed.PV", "8/1/2025 0:00", "8/1/2025 1:00")</code>
                     </div>
                     
-                    <p class="text-xs text-gray-600"><strong>Returns:</strong> Average value over 100 data points</p>
+                    <p class="text-xs text-gray-600"><strong>Returns:</strong> Average value (uses 100 samples)</p>
                 </div>
 
                 <!-- CREATE_PLOT_CODE Function -->
@@ -200,11 +200,11 @@
                             <li><strong>startDatetime<span class="text-red-500">*</span>:</strong> Start time as text</li>
                             <li><strong>endDatetime<span class="text-red-500">*</span>:</strong> End time as text</li>
                             <li><strong>points:</strong> Number of data points (default: 100)</li>
-                            <li><strong>height:</strong> Chart height ratio (default: 0.3)</li>
+                            <li><strong>height:</strong> Chart height in inches (default: 0.3)</li>
                             <li><strong>aspectRatio:</strong> Width to height ratio (default: 5)</li>
-                            <li><strong>showLine:</strong> Display line plot (default: true)</li>
+                            <li><strong>showLine:</strong> Display line between points (default: true)</li>
                             <li><strong>showPoints:</strong> Display data points (default: true)</li>
-                            <li><strong>opacity:</strong> Chart transparency 0-1 (default: 0.9)</li>
+                            <li><strong>opacity:</strong> Trend opacity 0 to 1 (default: 0.9)</li>
                             <li><strong>colors:</strong> Comma-separated colors (default: "green, red, blue")</li>
                             <li><strong>style:</strong> "sparkline", "minimal", or "normal" (default: "sparkline")</li>
                             <li><strong>labels:</strong> Comma-separated sensor labels (default: sensor names)</li>
@@ -251,8 +251,8 @@
             <!-- Need Help Card -->
             <div class="bg-white rounded-lg border border-gray-200 p-4 shadow-sm w-full">
                 <h3 class="text-lg font-medium mb-3 text-gray-800">Need Help?</h3>
-                <div class="text-sm text-gray-600 text-center">
-Contact us at <a href="mailto:austin@radialflow.net" class="text-indigo-600 underline font-medium">austin@radialflow.net</a>
+                <div class="text-sm text-gray-600">
+Send an email to <a href="mailto:austin@radialflow.net" class="text-indigo-600 underline font-medium">austin@radialflow.net</a>
                 </div>
             </div>
         </div>
